--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,54 @@ light blue background: #E6ECF4;
 clear button: #DE4841;
 clear button disabled: #D0CDCD
 */
+/*
+*,
+*:before,
+*:after {
+  /* box-sizing: border-border-box; */
+  .top-title-banner {
+  font-family: 'Life Savers', serif;
+  font-size: 50px;
+  color: #607AA0;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+/* .hidden {
+  display: none;
+} */
+
+.box-for-images-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.box-for-eight-ball {
+  display: flex;
+  /* flex-wrap: wrap-reverse; */
+}
+
+
+.clear {
+border-radius: 5px;
+padding: 10px;
+background-color: red;
+color: white;
+border: none;
+padding: 5px 15px;
+  width: 90px;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  opacity: 2;
+  margin-left: 15vw;
+  margin-right: 1vw;
+  font-size: 12px;
+  /* display: flex;
+
+  justify-content: center;
+  align-items: flex-end; */
+
+}
